src/test/resources/json/invalid_inputs/invalid_battery.json.except
Cannot deserialize value of type `int` from String "Q": not a valid `int` value